修改生产环境地址！

--- a/config/db_config.json
+++ b/config/db_config.json
@@ -5,8 +5,8 @@
     },
     "mysql": {
         "host": "localhost",
-        "user": "root",
-        "password": "your_password",
+        "user": "email_system",
+        "password": "jxHACf2dEfMzRnYF",
         "database": "email_system",
         "charset": "utf8mb4"
     }
