切换到生产环境

--- a/config/db_config.json
+++ b/config/db_config.json
@@ -1,5 +1,5 @@
 {
-    "environment": "local",
+    "environment": "prod",
     "type": "mysql",
     "sqlite": {
         "database_file": "../data/email_records.db"
